<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logged_in_as"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/join_room_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_status">

        <EditText
            android:id="@+id/room_name_input"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:hint="@string/destination_room_name"
            android:importantForAutofill="no"
            android:inputType="text" />


        <Button
            android:id="@+id/join_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/join_button_text" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_room_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_status">

        <LinearLayout
            android:id="@+id/leave_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/leave_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/leave" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_container_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/message_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leave_layout">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/message_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_input_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/message_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/type_message"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <AutoCompleteTextView
                    android:id="@+id/recipient_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/to"
                    android:inputType="text" />

            </LinearLayout>

            <Button
                android:id="@+id/send_text_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/send_text" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>